--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "typings": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.0.35",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
+    "@types/sinon": "^1.16.31",
     "awesome-typescript-loader": "^2.2.4",
     "bluebird": "^3.4.6",
     "browserify-versionify": "^1.0.6",
