--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "mocha": "mocha test/**/*.test.ts --require ts-node/register",
         "autoformat": "tsfmt -r",
         "prepublish": "tsc -d && publish-please guard",
-        "publish-please": "publish-please"
+        "publish-please": "publish-please",
+        "build": "webpack --env.production"
     },
     "repository": {
         "type": "git",
@@ -34,7 +35,6 @@
         "@types/chai": "^3.4.34",
         "@types/mocha": "^2.2.32",
         "@types/sinon": "^1.16.31",
-        "awesome-typescript-loader": "^2.2.4",
         "bluebird": "^3.4.6",
         "browserify-versionify": "^1.0.6",
         "chai": "^3.5.0",
@@ -66,6 +66,7 @@
         "rimraf": "^2.5.4",
         "sinon": "^2.0.0-pre.3",
         "sinon-chai": "^2.8.0",
+        "ts-loader": "^0.9.5",
         "ts-node": "^1.6.0",
         "tslint": "^3.15.1",
         "typedoc": "^0.5.0",
