--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "signals.js",
-    "version": "1.0.0-alpha.7",
+    "version": "1.0.0-alpha.8",
     "description": "TypeScript port of AS3 Signals.",
     "main": "lib/src/index.js",
     "typings": "lib/src/index.d.ts",
@@ -70,7 +70,7 @@
         "ts-node": "^1.6.0",
         "tslint": "^3.15.1",
         "typedoc": "^0.5.0",
-        "typescript": "^2.0.3",
+        "typescript": "^2.1.0-dev.20161030",
         "typescript-formatter": "^4.0.0",
         "webpack": "^2.1.0-beta.25",
         "webpack-dev-server": "^2.1.0-beta.9"
