--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,7 @@
         "moduleResolution": "node",
         "declaration": false,
         "noImplicitAny": false,
-        "sourceMap": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "sourceMap": true
     },
     "include": [
         "./src/**/*.ts",
