--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "mocha": "mocha test/**/*.test.ts --require ts-node/register",
     "autoformat": "tsfmt -r",
     "prepublish": "tsc -d && publish-please guard",
-    "publish-please": "npm run build && publish-please",
+    "publish-please": "npm run autoformat && npm run build && publish-please",
     "build": "webpack --env.production"
   },
   "repository": {
