--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signals.js",
-  "version": "1.0.0-alpha.12",
+  "version": "1.0.0-alpha.13",
   "description": "TypeScript port of AS3 Signals.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -74,7 +74,7 @@
     "ts-node": "^1.7.0",
     "tslint": "^3.15.1",
     "typedoc": "^0.5.1",
-    "typescript": "^2.1.0-dev.20161110",
+    "typescript": "^2.1.4",
     "typescript-formatter": "^4.0.0",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.10"
