--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signals.js",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.1",
   "description": "TypeScript port of AS3 Signals.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
