--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "es6-map": "^0.1.4",
     "es6-symbol": "^3.1.0",
     "glslify": "^6.0.1",
-    "imports-loader": "^0.7.0",
+    "imports-loader": "^0.7.1",
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^2.0.0",
     "karma": "^1.5.0",
@@ -65,12 +65,12 @@
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "publish-please": "^2.2.0",
-    "reflect-metadata": "^0.1.9",
+    "reflect-metadata": "0.1.8",
     "remap-istanbul": "^0.9.1",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.1",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "ts-loader": "^2.0.0",
+    "ts-loader": "^2.0.1",
     "ts-node": "^2.1.0",
     "tslint": "^4.5.1",
     "typedoc": "^0.5.7",
