--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "publish-please": "^2.2.0",
+    "reflect-metadata": "0.1.8",
     "remap-istanbul": "^0.9.1",
     "rimraf": "^2.6.1",
     "sinon": "^1.17.7",
