--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "ts-node": "^3.0.2",
     "tslint": "^4.5.1",
     "typedoc": "^0.5.7",
-    "typescript": "~2.1.6",
+    "typescript": "2.2.0",
     "typescript-formatter": "^5.1.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
