--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "ts-loader": "^2.0.3",
     "ts-node": "^3.0.2",
     "tslint": "^5.1.0",
-    "typescript": "2.2.0",
+    "typescript": "^2.4.2",
     "typescript-formatter": "^5.1.3",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
