--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "karma-webpack": "^2.0.4",
     "mocha": "^3.4.2",
     "publish-please": "^2.3.1",
-    "reflect-metadata": "0.1.8",
+    "reflect-metadata": "^0.1.10",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
     "sinon": "^2.3.8",
