--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "karma start --single-run",
     "mocha": "mocha test/**/*.test.ts --require ts-node/register",
-    "autoformat": "tsfmt -r",
+    "autoformat": "tsfmt -r --useTsconfig tsconfig.test.json",
     "prepublish": "tsc -d && publish-please guard",
     "clean-up": "rm -rf coverage && rm -rf lib",
     "publish-please": "npm run autoformat && npm run clean-up && npm run build && publish-please",
