--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -11,7 +11,7 @@ engines:
     enabled: true
   tslint:
     enabled: true
-    channel: latest
+    channel: beta
     config: tslint.json
 ratings:
   paths:
