--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "bluebird": "^3.5.0",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.1.2",
+    "codeclimate-tslint": "^0.6.0",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.1",
     "glslify": "^6.1.0",
