--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sh -e /etc/init.d/xvfb start
   - yarn config set registry "https://registry.npmjs.org"
   - yarn global add greenkeeper-lockfile@1
+  - yarn global add codeclimate-tslint
   - yarn global add codeclimate-test-reporter
 before_script:
   - greenkeeper-lockfile-update
