--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - stable
+env:
+  - CODECLIMATE_REPO_TOKEN=2aa3b8fb452081d0eaf0ff3574d29683b39414ee91831b95e7fafcb3c30f3901
+  - CODECLIMATE_API_HOST=https://codebeat.co/webhooks/code_coverage CODECLIMATE_REPO_TOKEN=88ef8956-4c0f-4a25-b35d-7fab824234e3
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
@@ -16,7 +19,3 @@ after_script:
   - greenkeeper-lockfile-upload
 after_success:
   - codeclimate-test-reporter < coverage/lcov.info
-  - CODECLIMATE_API_HOST=https://codebeat.co/webhooks/code_coverage \ CODECLIMATE_REPO_TOKEN=88ef8956-4c0f-4a25-b35d-7fab824234e3 \ codeclimate-test-reporter < coverage/lcov.info
-addons:
-  code_climate:
-    repo_token: 2aa3b8fb452081d0eaf0ff3574d29683b39414ee91831b95e7fafcb3c30f3901
