migrate to webpack 4

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "autoformat": "prettier --config .prettierrc --write {src,test}/**/{*,*.test}.ts",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib",
+    "compile": "tsc -d",
+    "dev": "webpack",
     "build": "webpack --env.production",
-    "prepare": "npm run clean-up && tsc -d",
+    "prepare": "npm run clean-up && npm run compile",
     "prepublishOnly": "publish-please guard",
     "publish-please": "npm run autoformat && npm run clean-up && npm run build && npm run test && publish-please"
   },
@@ -99,7 +101,9 @@
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.9.0",
     "typescript": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
   }
 }
