--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "declaration": true,
     "noImplicitAny": false,
-    "sourceMap": true
+    "sourceMap": false
   },
   "include": [
     "./src/**/*.ts"
