--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
+    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "removeComments": true,
     "sourceMap": false
   },
   "include": [
