--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "scripts": {
     "test": "nyc mocha",
     "karma": "karma start --single-run",
+    "tslint-check:src": "tslint-config-prettier-check ./tslint.json",
+    "tslint-check:test": "tslint-config-prettier-check ./tslint.test.json",
+    "tslint:src": "tslint --project tsconfig.json",
+    "tslint:test": "tslint --config tslint.test.json --project tsconfig.test.json",
+    "tslint": "npm run tslint-check:src && npm run tslint-check:test && npm run tslint:src && npm run tslint:test",
     "autoformat": "prettier --config .prettierrc --write {src,test}/**/{*,*.test}.ts",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib",
     "compile": "tsc -d",
     "dev": "webpack",
     "build": "webpack --env.production",
     "prepare": "npm run clean-up && npm run compile",
     "prepublishOnly": "publish-please guard",
-    "publish-please": "npm run autoformat && npm run clean-up && npm run build && npm run test && publish-please"
+    "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run build && npm run test && publish-please"
   },
   "nyc": {
     "include": [
