--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "tslint:test": "tslint --config tslint.test.json --project tsconfig.test.json",
     "tslint": "npm run tslint-check:src && npm run tslint-check:test && npm run tslint:src && npm run tslint:test",
     "autoformat": "prettier --config .prettierrc --write {src,test}{/,/**/}{*,*.test}.ts",
-    "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib",
-    "compile": "tsc -d",
+    "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf dist-test",
+    "compile:src": "tsc -d --importHelpers",
+    "compile:test": "tsc -p tsconfig.test.json -d --importHelpers",
     "dev": "webpack",
     "build": "webpack --env.production",
-    "prepare": "npm run clean-up && npm run compile",
+    "prepare": "npm run clean-up && npm run compile:src",
     "prepublishOnly": "publish-please guard",
     "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run build && npm run test && publish-please"
   },
@@ -62,6 +63,9 @@
     "url": "https://github.com/RobotlegsJS/SignalsJS/issues"
   },
   "homepage": "https://github.com/RobotlegsJS/SignalsJS#readme",
+  "dependencies": {
+    "tslib": "^1.9.3"
+  },
   "devDependencies": {
     "@types/bluebird": "^3.5.23",
     "@types/chai": "^4.1.4",
