--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "test": "nyc mocha",
-    "karma": "karma start --single-run",
+    "karma": "node --max-old-space-size=2048 node_modules/.bin/karma start --single-run",
     "tslint-check:src": "tslint-config-prettier-check ./tslint.json",
     "tslint-check:test": "tslint-config-prettier-check ./tslint.test.json",
     "tslint:src": "tslint --project tsconfig.json",
