--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@types/bluebird": "^3.5.24",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
-    "@types/sinon": "^5.0.5",
+    "@types/sinon": "^5.0.6",
     "bluebird": "^3.5.3",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.2.0",
@@ -82,11 +82,11 @@
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^3.1.1",
     "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-es6-shim": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
@@ -96,6 +96,7 @@
     "nyc": "^13.1.0",
     "prettier": "^1.15.2",
     "publish-please": "^5.2.0",
+    "puppeteer": "^1.10.0",
     "reflect-metadata": "^0.1.12",
     "remap-istanbul": "^0.12.0",
     "rimraf": "^2.6.2",
@@ -108,7 +109,7 @@
     "tslint-config-prettier": "^1.16.0",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.25.1",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
