--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "tslint:src": "tslint --project tsconfig.json",
     "tslint:test": "tslint --config tslint.test.json --project tsconfig.test.json",
     "tslint": "npm run tslint-check:src && npm run tslint-check:test && npm run tslint:src && npm run tslint:test",
-    "autoformat": "prettier --config .prettierrc --write {src,test}{/,/**/}{*,*.test}.ts",
+    "autoformat": "prettier --config .prettierrc --write --list-different \"{src,static,test,example,definitions}{/**/,/}*.{html,css,js,json,ts}\"",
     "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf dist-test",
     "compile:src": "tsc -d --importHelpers",
     "compile:test": "tsc -p tsconfig.test.json -d --importHelpers",
