--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "compile:src": "tsc -d --importHelpers",
     "compile:test": "tsc -p tsconfig.test.json -d --importHelpers",
     "dev": "webpack",
-    "build": "webpack --env.production",
+    "build": "webpack --env production",
     "prepare": "npm run clean-up && npm run compile:src",
     "prepublishOnly": "publish-please guard",
     "publish-please": "npm run lint && npm run autoformat && npm run clean-up && npm run build && npm run test && publish-please"
@@ -34,7 +34,8 @@
       ".ts"
     ],
     "require": [
-      "ts-node/register"
+      "ts-node/register",
+      "source-map-support/register"
     ],
     "reporter": [
       "text-summary",
@@ -76,14 +77,14 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
-    "@types/sinon": "^9.0.9",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/sinon": "^10.0.0",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "browserify-versionify": "^1.0.6",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.3",
     "eslint": "^7.27.0",
@@ -94,35 +95,35 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-unicorn": "^32.0.1",
     "glslify": "^7.1.1",
-    "imports-loader": "^0.8.0",
+    "imports-loader": "^3.0.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^4.4.1",
+    "karma": "^6.3.2",
     "karma-chai-sinon": "^0.1.5",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-es6-shim": "^1.0.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-sourcemap-writer": "^0.1.2",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^7.2.0",
+    "karma-webpack": "^5.0.0",
+    "mocha": "^8.4.0",
     "nyc": "^15.1.0",
     "prettier": "^2.3.0",
     "publish-please": "^5.5.2",
-    "puppeteer": "^5.5.0",
+    "puppeteer": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "sinon": "^9.2.2",
-    "sinon-chai": "^3.5.0",
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.6.0",
     "source-map-support": "^0.5.19",
-    "terser-webpack-plugin": "^2.3.5",
-    "ts-loader": "^8.0.12",
+    "terser-webpack-plugin": "^5.1.2",
+    "ts-loader": "^9.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
