--- a/package.json
+++ b/package.json
@@ -77,12 +77,14 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/bluebird": "^3.5.35",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/sinon": "^10.0.0",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "bluebird": "^3.7.2",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.3.4",
     "es6-map": "^0.1.5",
